ASSERTION FAILED: This HTTPServer does not know how to respond to a request for /popup-after-redirection.html https://bugs.webkit.org/show_bug.cgi?id=231256 <rdar://problem/83904937>

Reviewed by Alex Christensen.

Stop hardcoding the HTTPServer port in COOP API tests to address flakiness.

* TestWebKitAPI/Tests/WebKitCocoa/ProcessSwapOnNavigation.mm:
* TestWebKitAPI/cocoa/HTTPServer.h:
* TestWebKitAPI/cocoa/HTTPServer.mm:
(TestWebKitAPI::HTTPServer::addResponse):


Canonical link: https://commits.webkit.org/242636@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@283710 268f45cc-cd09-0410-ab3c-d52691b4dbfc